# glados-tts-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  application.py  docker-compose.yml  pyproject.toml
src/app/: app.py  tts.py
