[project]
name = "glados-tts-api"
version = "0.1.0"
description = "OpenAI-compatible TTS API for the GladOS TTS model"
readme = "README.md"
authors = [{ name = "Steven Loria", email = "sloria1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "glados[cpu]",
    "litestar[standard,structlog]>=2.15.1",
    "soundfile>=0.13.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "setuptools"]

[tool.hatch.build]
dev-mode-dirs = ["src", "."]
ignore-vcs = true
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
glados = { git = "https://github.com/dnhkng/GLaDOS.git" }

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ruff>=0.9.6"]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# use all checks available in ruff except the ones explicitly ignored below
select = ["ALL"]
ignore = [
    "D10",    # allow missing docstrings
    "FIX002", # allow TODO comments
    "TD",     # allow TODO comments to be whatever we want
]
